--- a/templates/recipe-search.html
+++ b/templates/recipe-search.html
@@ -2,7 +2,7 @@
 <div class="content">
   <h1>Advanced Recipe Search</h1>
   <div class="container">
-    <form action="/adv_search_results" id="recipe-search">
+    <form action="/adv_search_results/0" id="recipe-search">
       <div class="form-row">
         <div class="col-9">
           <label for="advQuery">Search (required):</label>
