--- a/templates/base.html
+++ b/templates/base.html
@@ -62,6 +62,9 @@
           <li class="nav-item">
             <a class="nav-link" href="/advanced_search">Advanced Search</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/explore">Explore</a>
+          </li>
           {% if not g.user %}
           <li class="nav-item">
             <a class="nav-link" href="/user/signup">Sign Up <Inp></Inp></a>
